--- a/index.html
+++ b/index.html
@@ -21,15 +21,19 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"> <img src="imgs/plane.png" class="img-fluid" alt=""> </a>
+                <span class="navbar-text">
+                    <strong> Joe Biden's Presidency </strong>
+                </span>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                    <ul class="navbar-nav  ms-auto mb-2 mb-lg-0">
+
                         <li class="nav-item">
-                        </li>
+                            <a </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#life"> Early Life</a>
                         </li>
@@ -40,15 +44,12 @@
                             <a class="nav-link" href="#impact">Impacts</a>
                         </li>
                     </ul>
-                    <span class="navbar-text">
-                        <strong> Amelia Earhart </strong>
-                    </span>
                 </div>
             </div>
         </nav>
     </header>
     <div class="typewriter mx-auto mt-5 ps-3">
-        <h3> Amelia Earhart </h3>
+        <h4> Husband, Father, Leader </h4>
     </div>
     <div id="life" class="white">
         <h2>Early Life</h2>
