--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container-fluid">
                 <span class="navbar-text">
-                    <strong> Joe Biden's Presidency </strong>
+                    <strong> <a class="navbar-brand" href="index.html">Joe Biden's Presidency</a> </strong>
                 </span>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,9 +33,9 @@
                     <ul class="navbar-nav  ms-auto mb-2 mb-lg-0">
 
                         <li class="nav-item">
-                            <a </li>
+
                         <li class="nav-item">
-                            <a class="nav-link" href="#life"> Early Life</a>
+                            <a class="nav-link" href="Earlylife.html"> Early Life</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#accomplishments">Accomplishments</a>
@@ -48,164 +48,18 @@
             </div>
         </nav>
     </header>
+    <div class="mt-5">
+        <h1> Joseph R. Biden Jr</h1>
+    </div>
     <div class="typewriter mx-auto mt-5 ps-3">
-        <h4> Husband, Father, Leader </h4>
-    </div>
-    <div id="life" class="white">
-        <h2>Early Life</h2>
-        <div class="row justify-content-center align-items-center text-center">
-            <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
-                <div class="card mx-auto">
-                    <img src="imgs/amelia child.jpg" class="card-img-top img-fluid mx-auto" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Earhart is Born</h5>
-                        <p class="card-text">Amelia Mary Earhart was born on July 24, 1897 in Atchison, Kansas. She
-                            spent
-                            most
-                            of her time with her grandparents up until they died. After, her family struggled
-                            financially as
-                            well with her fathers use of Alcohol.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
-                <div class="card mx-auto">
-                    <img src="imgs/young amelia.gif" class="card-img-top img-fluid mx-auto" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Earhart Education</h5>
-                        <p class="card-text">The Earharts moved often, and she completed high school in Chicago in 1916.
-                            Then Earhart was able to attend the Ogontz School in Rydal, Pennsylvania.
-                            However, Amelia developed an interest in caring for soldiers wounded in World War I. In 1918
-                            she left junior college to become a nurse’s aide in Toronto.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
-                <div class="card mx-auto">
-                    <img src="imgs/ameliaflies.jpg" class="card-img-top img-fluid mx-auto" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Earhart Flies</h5>
-                        <p class="card-text"> Shortly after, she went on her first airplane ride in 1920, an experience
-                            that prompted her to take flying lessons.
-                            In 1921 she bought her first plane, a Kinner Airster, and two years later she earned her
-                            pilot’s license.
-
-
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <h4>
+            <span> Husband, </span>
+            <span> Father, </span>
+            <span> Leader </span>
+        </h4>
     </div>
 
-
-
-
-
-
-    <div id="accomplishments" class="white">
-        <h2>Accomplishments</h2>
-        <div class="row justify-content-center align-items-center text-center">
-            <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
-                <div class="card mx-auto">
-                    <img src="imgs/ameliaaccomplish1.webp" class="card-img-top img-fluid mx-auto" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Accomplishment #1</h5>
-                        <p class="card-text">On her twenty-fifth birthday, Earhart purchased a Kinner Airster biplane.
-                            She flew it, in 1922, when she set the women’s altitude record of 14,000 feet.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class=" col-lg-4 col-sm-12 col-md-6 mt-5 py-3 mt-3 py-2">
-                <div class="card mx-auto">
-                    <img src="imgs/ameliaaccomplish2.webp" class="card-img-top img-fluid mx-auto" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Accomplishment #2</h5>
-                        <p class="card-text">In 1932, she became the first woman to fly solo across the Atlantic—as a
-                            pilot.
-                            Her awards included the American Distinguished Flying Cross and the Cross of the French
-                            Legion of Honor.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
-                <div class="card mx-auto">
-                    <img src="imgs/ameliaaccomplish3.jpg" class="card-img-top img-fluid mx-auto" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Accomplishment #3</h5>
-                        <p class="card-text"> In 1935, Purdue University hired Earhart as aviation advisor and career
-                            counselor for women and purchased the Lockheed plane she dubbed her “flying laboratory.”
-
-
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div id="impact" class="white">
-        <h2>Impacts</h2>
-        <div class="row justify-content-center align-items-center text-center mt-5 py-3">
-            <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
-                <div class="card mx-auto">
-                    <img src="imgs/ameliaimpact1.jpg" class="card-img-top img-fluid mx-auto" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Earhart was a nurse’s aide.</h5>
-                        <p class="card-text">Earhart became a nurse’s aide with the Red Cross in Toronto and treated
-                            wounded soldiers returning from battle during World War I. New York City became her next
-                            destination, where she briefly enrolled as a medical student.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
-                <div class="card mx-auto">
-                    <img src="imgs/ameliaimpact2.webp" class="card-img-top img-fluid mx-auto" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">First female passenger on a transatlantic flight.</h5>
-                        <p class="card-text">Earhart was the navigator for the pilot and co-pilot. The plane, named
-                            Friendship, successfully flew from Canada to Wales. The flight took about 21 hours. Upon her
-                            return to the U.S., she was celebrated with a parade in New York City.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
-                <div class="card mx-auto">
-                    <img src="imgs/ameliaimpact3.jpg" class="card-img-top img-fluid mx-auto" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">First woman to fly solo across the Atlantic Ocean.</h5>
-                        <p class="card-text"> She was the second person to accomplish this transatlantic journey.
-                            Earhart flew from Canada to Ireland in May of 1932, and earned
-                            the respect and admiration of aviation enthusiasts around the world.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <main></main>
-    <footer>
-        <div class="container-fluid">
-            <footer class="py-2">
-                <ul class="nav justify-content-center border-bottom">
-                    <li class="nav-item2"><a href="#" class="nav-link px-2 text-body-secondary">526agold@frhsd.com</a>
-                    </li>
-                    <li class="nav-item2"><a href="#" class="nav-link px-2 text-body-secondary">www.brittanica.com</a>
-                    </li>
-                    <li class="nav-item2"><a href="#" class="nav-link px-2 text-body-secondary">Junior Year October
-                            Site</a></li>
-                </ul>
-                <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
-            </footer>
-        </div>
-    </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
