finished putting in info and styled early life page a little

--- a/Accomplishments.html
+++ b/Accomplishments.html
@@ -28,13 +28,13 @@
                     <ul class="navbar-nav  ms-auto mb-2 mb-lg-0">
 
                         <li class="nav-item">
-                            <a class="nav-link" href="Earlylife.html"> Early Life</a>
+                            <a class="nav-link" href="Earlylife.html"> Early Life/Education</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="Accomplishments.html">Accomplishments</a>
+                            <a class="nav-link" href="impacts.html">Fight for presidency</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="impacts.html">Impacts</a>
+                            <a class="nav-link active" href="Accomplishments.html">Accomplishments during presidency</a>
                         </li>
                     </ul>
                 </div>
@@ -49,8 +49,12 @@
                     <img src="imgs/ameliaaccomplish1.webp" class="card-img-top img-fluid mx-auto" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Accomplishment #1</h5>
-                        <p class="card-text">On her twenty-fifth birthday, Earhart purchased a Kinner Airster biplane.
-                            She flew it, in 1922, when she set the women’s altitude record of 14,000 feet.
+                        <p class="card-text">Five laws Biden signed in his first year:
+                            The American Rescue Plan Act
+                            Infrastructure Investment and Jobs Act
+                            Bills to avoid a government shutdown and keep the federal government running
+                            Juneteenth National Independence Day Act
+                            Uyghur Forced Labor Prevention Act
                         </p>
                     </div>
                 </div>
@@ -60,10 +64,12 @@
                     <img src="imgs/ameliaaccomplish2.webp" class="card-img-top img-fluid mx-auto" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Accomplishment #2</h5>
-                        <p class="card-text">In 1932, she became the first woman to fly solo across the Atlantic—as a
-                            pilot.
-                            Her awards included the American Distinguished Flying Cross and the Cross of the French
-                            Legion of Honor.
+                        <p class="card-text">Five executive laws biden signed
+                            Reversing Trump-era policies
+                            Vaccine requirements
+                            Gun control
+                            Climate targets
+                            Improving government processes
                         </p>
                     </div>
                 </div>
@@ -73,8 +79,9 @@
                     <img src="imgs/ameliaaccomplish3.jpg" class="card-img-top img-fluid mx-auto" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Accomplishment #3</h5>
-                        <p class="card-text"> In 1935, Purdue University hired Earhart as aviation advisor and career
-                            counselor for women and purchased the Lockheed plane she dubbed her “flying laboratory.”
+                        <p class="card-text"> Saw more than 700,000 people joining the labor force in August 2023, which
+                            means the highest share of working-age Americans are in the workforce now than at any time
+                            in the past 20 years.
 
 
                         </p>
