--- a/impacts.html
+++ b/impacts.html
@@ -31,13 +31,13 @@
                             <li class="nav-item">
 
                             <li class="nav-item">
-                                <a class="nav-link" href="Earlylife.html"> Early Life</a>
+                                <a class="nav-link" href="Earlylife.html"> Early Life/Education</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="Accomplishments.html">Accomplishments</a>
+                                <a class="nav-link" href="impacts.html">Fight for presidency</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="impacts.html">Impacts</a>
+                                <a class="nav-link" href="Accomplishments.html">Accomplishments during presidency</a>
                             </li>
                         </ul>
                     </div>
