--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Amelia Earhart</title>
+    <title>Joe Bidens Presidency</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -35,13 +35,13 @@
                         <li class="nav-item">
 
                         <li class="nav-item">
-                            <a class="nav-link" href="Earlylife.html"> Early Life</a>
+                            <a class="nav-link" href="Earlylife.html"> Early Life/Education</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#accomplishments">Accomplishments</a>
+                            <a class="nav-link" href="impacts.html">Fight for presidency</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#impact">Impacts</a>
+                            <a class="nav-link" href="accomplishments">Accomplishments during presidency</a>
                         </li>
                     </ul>
                 </div>
