--- a/Earlylife.html
+++ b/Earlylife.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
@@ -30,13 +31,13 @@
                         <li class="nav-item">
                             <a </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="Earlylife.html"> Early Life</a>
+                            <a class="nav-link active" href="Earlylife.html"> Early Life/Education</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Accomplishments.html">Accomplishments</a>
+                            <a class="nav-link" href="impacts.html">Fight for presidency</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="impacts.html">Impacts</a>
+                            <a class="nav-link" href="Accomplishments.html">Accomplishments during presidency</a>
                         </li>
                     </ul>
                 </div>
@@ -49,13 +50,11 @@
                     <div class="card mx-auto">
                         <img src="imgs/amelia child.jpg" class="card-img-top img-fluid mx-auto" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Earhart is Born</h5>
-                            <p class="card-text">Amelia Mary Earhart was born on July 24, 1897 in Atchison, Kansas. She
-                                spent
-                                most
-                                of her time with her grandparents up until they died. After, her family struggled
-                                financially as
-                                well with her fathers use of Alcohol.
+                            <h5 class="card-title">Childhood</h5>
+                            <p class="card-text"> Joe Biden was born November 20th, 1942 in Scranton, Pennsylvania. He
+                                lived with his parents, Catherine Eugenia Finnegan, and Joseph R. Biden Sr
+                                as well as his siblings, James Biden, Francis W. Biden, and Valerie Biden Owens.
+
                             </p>
                         </div>
                     </div>
@@ -64,13 +63,11 @@
                     <div class="card mx-auto">
                         <img src="imgs/young amelia.gif" class="card-img-top img-fluid mx-auto" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Earhart Education</h5>
-                            <p class="card-text">The Earharts moved often, and she completed high school in Chicago in
-                                1916.
-                                Then Earhart was able to attend the Ogontz School in Rydal, Pennsylvania.
-                                However, Amelia developed an interest in caring for soldiers wounded in World War I. In
-                                1918
-                                she left junior college to become a nurse’s aide in Toronto.
+                            <h5 class="card-title">Education</h5>
+                            <p class="card-text">He attended University of Delaware in 1965 where he received his
+                                bachelor's degree. After completing his education at Delaware, he then attended Syracuse
+                                University where he received his law degree.
+
                             </p>
                         </div>
                     </div>
@@ -79,13 +76,11 @@
                     <div class="card mx-auto">
                         <img src="imgs/ameliaflies.jpg" class="card-img-top img-fluid mx-auto" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Earhart Flies</h5>
-                            <p class="card-text"> Shortly after, she went on her first airplane ride in 1920, an
-                                experience
-                                that prompted her to take flying lessons.
-                                In 1921 she bought her first plane, a Kinner Airster, and two years later she earned her
-                                pilot’s license.
-
+                            <h5 class="card-title">Before entering Politics</h5>
+                            <p class="card-text">After Graduating from Syracuse, he took a job with a corporate law firm
+                                defending big businesses. He then realized that it wasn't right for him and then became
+                                a public defender, primarily for
+                                African Americans.
 
                             </p>
                         </div>
