--- a/Earlylife.html
+++ b/Earlylife.html
@@ -27,9 +27,6 @@
                 <div class="collapse navbar-collapse" id="navbarText">
 
                     <ul class="navbar-nav  ms-auto mb-2 mb-lg-0">
-
-                        <li class="nav-item">
-                            <a </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="Earlylife.html"> Early Life/Education</a>
                         </li>
@@ -44,7 +41,7 @@
             </div>
         </nav>
         <div id="life" class="white">
-            <h2>Early Life</h2>
+            <h1> Early Life & Education </h1>
             <div class="row justify-content-center align-items-center text-center">
                 <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
                     <div class="card mx-auto">
