--- a/impacts.html
+++ b/impacts.html
@@ -10,6 +10,8 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="https://use.typekit.net/dsr1cun.css">
 </head>
 
 <body>
@@ -34,7 +36,7 @@
                                 <a class="nav-link" href="Earlylife.html"> Early Life/Education</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="impacts.html">Fight for presidency</a>
+                                <a class="nav-link active" href="impacts.html">Fight for presidency</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="Accomplishments.html">Accomplishments during presidency</a>
@@ -47,16 +49,15 @@
     </header>
     <main>
         <div id="impact" class="white">
-            <h2>Impacts</h2>
+            <h1>Fight for Presidency</h1>
             <div class="row justify-content-center align-items-center text-center mt-5 py-3">
                 <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
                     <div class="card mx-auto">
                         <img src="imgs/ameliaimpact1.jpg" class="card-img-top img-fluid mx-auto" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Earhart was a nurse’s aide.</h5>
-                            <p class="card-text">Earhart became a nurse’s aide with the Red Cross in Toronto and treated
-                                wounded soldiers returning from battle during World War I. New York City became her next
-                                destination, where she briefly enrolled as a medical student.
+                            <h5 class="card-title">The basics</h5>
+                            <p class="card-text">Apart of the Democratic Party and ran against the republican, Donald J
+                                Trump, who previously served a term in the white house.
                             </p>
                         </div>
                     </div>
@@ -65,11 +66,11 @@
                     <div class="card mx-auto">
                         <img src="imgs/ameliaimpact2.webp" class="card-img-top img-fluid mx-auto" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">First female passenger on a transatlantic flight.</h5>
-                            <p class="card-text">Earhart was the navigator for the pilot and co-pilot. The plane, named
-                                Friendship, successfully flew from Canada to Wales. The flight took about 21 hours. Upon
-                                her
-                                return to the U.S., she was celebrated with a parade in New York City.
+                            <h5 class="card-title">What was he about?</h5>
+                            <p class="card-text">His campaign platform was primarily about: Racial equity and equal
+                                opportunity, the military, Fixing problems in student loan programs, manufacturing, and
+                                Creating well paid jobs.
+
                             </p>
                         </div>
                     </div>
@@ -78,10 +79,10 @@
                     <div class="card mx-auto">
                         <img src="imgs/ameliaimpact3.jpg" class="card-img-top img-fluid mx-auto" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">First woman to fly solo across the Atlantic Ocean.</h5>
-                            <p class="card-text"> She was the second person to accomplish this transatlantic journey.
-                                Earhart flew from Canada to Ireland in May of 1932, and earned
-                                the respect and admiration of aviation enthusiasts around the world.
+                            <h5 class="card-title">Results</h5>
+                            <p class="card-text"> Ultimately, he beat donald trump in the electoral college vote
+                                306-232, and had a 4 point margin in the popular vote
+
                             </p>
                         </div>
                     </div>
