styled, have to finish linking to outside sources

--- a/Accomplishments.html
+++ b/Accomplishments.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="style4.css">
+    <link rel="stylesheet" href="https://use.typekit.net/dsr1cun.css">
 </head>
 
 <body>
@@ -42,67 +43,92 @@
             </div>
         </nav>
     </header>
-    <div id="accomplishments" class="white">
-        <h2>Accomplishments</h2>
-        <div class="row justify-content-center align-items-center text-center">
-            <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
-                <div class="card mx-auto">
-                    <img src="imgs/ameliaaccomplish1.webp" class="card-img-top img-fluid mx-auto" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Accomplishment #1</h5>
-                        <p class="card-text">Five laws Biden signed in his first year:
-                            The American Rescue Plan Act
-                            Infrastructure Investment and Jobs Act
-                            Bills to avoid a government shutdown and keep the federal government running
-                            Juneteenth National Independence Day Act
-                            Uyghur Forced Labor Prevention Act
-                        </p>
-                    </div>
+    <div class="timeline-container">
+        <h1>Joe Biden's Presidency Timeline</h1>
+
+        <div class="timeline">
+            <div class="event">
+                <div class="event-date">January 20, 2021</div>
+                <div class="event-details">
+                    <h3>Inauguration</h3>
+                    <p>Joe Biden was inaugurated as the 46th President of the United States.</p>
                 </div>
             </div>
-            <div class=" col-lg-4 col-sm-12 col-md-6 mt-5 py-3 mt-3 py-2">
-                <div class="card mx-auto">
-                    <img src="imgs/ameliaaccomplish2.webp" class="card-img-top img-fluid mx-auto" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Accomplishment #2</h5>
-                        <p class="card-text">Five executive laws biden signed
-                            Reversing Trump-era policies
-                            Vaccine requirements
-                            Gun control
-                            Climate targets
-                            Improving government processes
-                        </p>
-                    </div>
+
+            <div class="event">
+                <div class="event-date">February 14, 2021</div>
+                <div class="event-details">
+                    <h3>COVID-19 Relief Bill Passed</h3>
+                    <p>Biden signs a $1.9 trillion COVID-19 relief package into law to aid the economy and the
+                        fight against the pandemic.</p>
                 </div>
             </div>
-            <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
-                <div class="card mx-auto">
-                    <img src="imgs/ameliaaccomplish3.jpg" class="card-img-top img-fluid mx-auto" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Accomplishment #3</h5>
-                        <p class="card-text"> Saw more than 700,000 people joining the labor force in August 2023, which
-                            means the highest share of working-age Americans are in the workforce now than at any time
-                            in the past 20 years.
 
+            <div class="event">
+                <div class="event-date">August 15, 2021</div>
+                <div class="event-details">
+                    <h3>Afghanistan Withdrawal</h3>
+                    <p>The United States completed its military withdrawal from Afghanistan, ending a 20-year
+                        conflict.</p>
+                </div>
+            </div>
 
-                        </p>
-                    </div>
+            <div class="event">
+                <div class="event-date">November 15, 2021</div>
+                <div class="event-details">
+                    <h3>Infrastructure Bill Signed</h3>
+                    <p>Biden signed a $1 trillion infrastructure bill into law to rebuild roads, bridges, and
+                        public transit.</p>
+                </div>
+            </div>
+
+            <div class="event">
+                <div class="event-date">March 2022</div>
+                <div class="event-details">
+                    <h3>Russia Invades Ukraine</h3>
+                    <p>Biden's administration imposed heavy sanctions on Russia in response to its invasion of
+                        Ukraine.</p>
+                </div>
+            </div>
+
+            <div class="event">
+                <div class="event-date">December 2022</div>
+                <div class="event-details">
+                    <h3>Omicron Surge</h3>
+                    <p>The Omicron variant of COVID-19 caused a surge in cases, leading to renewed focus on
+                        testing and vaccination campaigns.</p>
+                </div>
+            </div>
+
+            <div class="event">
+                <div class="event-date">November 2024</div>
+                <div class="event-details">
+                    <h3>Midterm Elections</h3>
+                    <p>The midterm elections saw shifts in congressional control, with the Democratic party
+                        maintaining a slim majority in the Senate.</p>
                 </div>
             </div>
         </div>
     </div>
-    <main></main>
-    <footer>
-        <!-- place footer here -->
-    </footer>
-    <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
+</html>
+
+</body>
+
+</html>
+
+<main></main>
+<footer>
+    <!-- place footer here -->
+</footer>
+<!-- Bootstrap JavaScript Libraries -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
