--- a/Earlylife.html
+++ b/Earlylife.html
@@ -43,10 +43,10 @@
         </nav>
         <div id="life" class="white">
             <h1> Early Life & Education </h1>
-            <div class="row justify-content-center align-items-center text-center">
+            <div class="row justify-content-center align-items-center text-center mx-2">
                 <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
                     <div class="card mx-auto">
-                        <img src="imgs/amelia child.jpg" class="card-img-top img-fluid mx-auto" alt="...">
+                        <img src="imgs/joey.jpg" class="card-img-top img-fluid mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Childhood</h5>
                             <p class="card-text"> Joe Biden was born November 20th, 1942 in Scranton, Pennsylvania. He
@@ -59,7 +59,7 @@
                 </div>
                 <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
                     <div class="card mx-auto">
-                        <img src="imgs/young amelia.gif" class="card-img-top img-fluid mx-auto" alt="...">
+                        <img src="imgs/joey2.jpg" class="card-img-top img-fluid mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Education</h5>
                             <p class="card-text">He attended University of Delaware in 1965 where he received his
@@ -72,7 +72,7 @@
                 </div>
                 <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
                     <div class="card mx-auto">
-                        <img src="imgs/ameliaflies.jpg" class="card-img-top img-fluid mx-auto" alt="...">
+                        <img src="imgs/joey3.jpg" class="card-img-top img-fluid mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Before entering Politics</h5>
                             <p class="card-text">After Graduating from Syracuse, he took a job with a corporate law firm
