--- a/impacts.html
+++ b/impacts.html
@@ -50,10 +50,10 @@
     <main>
         <div id="impact" class="white">
             <h1>Fight for Presidency</h1>
-            <div class="row justify-content-center align-items-center text-center mt-5 py-3">
-                <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
+            <div class="row justify-content-center align-items-center text-center mt-5 py-3 mx-2">
+                <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2 ">
                     <div class="card mx-auto">
-                        <img src="imgs/ameliaimpact1.jpg" class="card-img-top img-fluid mx-auto" alt="...">
+                        <img src="imgs/campaign1.jpg" class="card-img-top img-fluid mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">The basics</h5>
                             <p class="card-text">Apart of the Democratic Party and ran against the republican, Donald J
@@ -64,7 +64,7 @@
                 </div>
                 <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
                     <div class="card mx-auto">
-                        <img src="imgs/ameliaimpact2.webp" class="card-img-top img-fluid mx-auto" alt="...">
+                        <img src="imgs/campaign3.jpg" class="card-img-top img-fluid mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">What was he about?</h5>
                             <p class="card-text">His campaign platform was primarily about: Racial equity and equal
@@ -77,7 +77,7 @@
                 </div>
                 <div class=" col-lg-4 col-sm-12 col-md-6 mt-3 py-2">
                     <div class="card mx-auto">
-                        <img src="imgs/ameliaimpact3.jpg" class="card-img-top img-fluid mx-auto" alt="...">
+                        <img src="imgs/campaign3.webp" class="card-img-top img-fluid mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Results</h5>
                             <p class="card-text"> Ultimately, he beat donald trump in the electoral college vote
