--- a/Earlylife.html
+++ b/Earlylife.html
@@ -28,6 +28,10 @@
                 <div class="collapse navbar-collapse" id="navbarText">
 
                     <ul class="navbar-nav  ms-auto mb-2 mb-lg-0">
+                 
+                        <li class="nav-item"> 
+                            <a class="nav-link" href="index.html"> Home </a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="Earlylife.html"> Early Life/Education</a>
                         </li>
@@ -52,7 +56,7 @@
                             <p class="card-text"> Joe Biden was born November 20th, 1942 in Scranton, Pennsylvania. He
                                 lived with his parents, Catherine Eugenia Finnegan, and Joseph R. Biden Sr
                                 as well as his siblings, James Biden, Francis W. Biden, and Valerie Biden Owens.
-
+                                <a href="https://millercenter.org/president/biden/life-before-the-presidency" target="_blank" class="btn btn-primary">Learn more!</a>
                             </p>
                         </div>
                     </div>
@@ -65,7 +69,7 @@
                             <p class="card-text">He attended University of Delaware in 1965 where he received his
                                 bachelor's degree. After completing his education at Delaware, he then attended Syracuse
                                 University where he received his law degree.
-
+                                <a href="https://millercenter.org/president/biden/life-before-the-presidency" target="_blank" class="btn btn-primary">Learn more!</a>
                             </p>
                         </div>
                     </div>
@@ -79,7 +83,7 @@
                                 defending big businesses. He then realized that it wasn't right for him and then became
                                 a public defender, primarily for
                                 African Americans.
-
+                                <a href="https://millercenter.org/president/biden/life-before-the-presidency" target="_blank" class="btn btn-primary">Learn more!</a>
                             </p>
                         </div>
                     </div>
