--- a/Accomplishments.html
+++ b/Accomplishments.html
@@ -29,6 +29,11 @@
 
                     <ul class="navbar-nav  ms-auto mb-2 mb-lg-0">
 
+
+                        <li class="nav-item"> 
+                            <a class="nav-link" href="index.html"> Home </a>
+                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="Earlylife.html"> Early Life/Education</a>
                         </li>
