--- a/impacts.html
+++ b/impacts.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Impacts</title>
+    <title>Fight for Presidency</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -30,8 +30,9 @@
 
                         <ul class="navbar-nav  ms-auto mb-2 mb-lg-0">
 
-                            <li class="nav-item">
-
+                            <li class="nav-item"> 
+                                <a class="nav-link" href="index.html"> Home </a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="Earlylife.html"> Early Life/Education</a>
                             </li>
@@ -58,6 +59,7 @@
                             <h5 class="card-title">The basics</h5>
                             <p class="card-text">Apart of the Democratic Party and ran against the republican, Donald J
                                 Trump, who previously served a term in the white house.
+                                <a href="https://millercenter.org/president/biden/campaigns-and-elections" target="_blank" class="btn btn-primary">Learn more!</a>
                             </p>
                         </div>
                     </div>
@@ -70,7 +72,7 @@
                             <p class="card-text">His campaign platform was primarily about: Racial equity and equal
                                 opportunity, the military, Fixing problems in student loan programs, manufacturing, and
                                 Creating well paid jobs.
-
+                                <a href="https://millercenter.org/president/biden/campaigns-and-elections" target="_blank" class="btn btn-primary">Learn more!</a>
                             </p>
                         </div>
                     </div>
@@ -82,13 +84,24 @@
                             <h5 class="card-title">Results</h5>
                             <p class="card-text"> Ultimately, he beat donald trump in the electoral college vote
                                 306-232, and had a 4 point margin in the popular vote
-
+                                <a href="https://millercenter.org/president/biden/campaigns-and-elections" target="_blank" class="btn btn-primary">Learn more!</a>
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        
+        <div class="background"></div>
+        <button id="popup">Watch Video about Joe Biden!</button>
+        <div id="videoPopup1" class="popup">
+            <div class="popup-content">
+                <span class="close" id="close">×</span>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/R6e4ruziZBI?si=0zPPZFs7St7ueQP5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
+        <script src="script.js"></script>
+
     </main>
     <footer>
         <!-- place footer here -->
@@ -100,7 +113,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"> <script>
+        <script src="script.js">
 </body>
 
 </html>
